# tag-governance

./: .gitignore  DESIGN_GAP_ANALYSIS.md  README.md  annotate.sql  app.py  app.yaml  app.yml  authz.py  ci.yml.github-workflow  databricks.yml  db.py  ensure_app_env.py  grant_app_sp.sh  jobs.py  materialize.sql  package.json  postdeploy_grant.sh  pyproject.toml  queries.py  requirements.txt  rollback_job.py  schema.sql  setup_m2.sh  tagging.py  tsconfig.json  writer.py  writer_job.py  ws_clients.py
src/tag_governance/backend/: __init__.py  capability.py  db.py  models.py  queries.py  rollback_job.py  router.py  scan_job.py  tag_rules.py  tagging.py  writer.py  writer_job.py
src/tag_governance/ui/: index.html
src/tag_governance/ui/lib/: api.ts
src/tag_governance/ui/routes/: index.tsx
tests/: test_capability.py  test_core.py  test_queries_params.py  test_tag_rules.py
